# crm-students

./: Makefile  README.md  pyproject.toml
crm/: app.py  database.py  models.py  validation.py
